--- a/tenor-web/package.json
+++ b/tenor-web/package.json
@@ -14,11 +14,11 @@
 		"build-storybook": "build-storybook"
 	},
 	"dependencies": {
+		"clsx": "^1.1.1",
 		"next": "10.2.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"react-feather": "^2.0.9",
-		"tailwindcss-classnames": "^2.1.2"
+		"react-feather": "^2.0.9"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.2",
