--- a/tenor-web/package.json
+++ b/tenor-web/package.json
@@ -11,14 +11,17 @@
 		"lint": "eslint '**/*.{js,ts,tsx}' --fix",
 		"lint:ci": "eslint '**/*.{js,ts,tsx}'",
 		"storybook": "start-storybook -p 6006",
-		"build-storybook": "build-storybook"
+		"build-storybook": "build-storybook",
+		"test": "jest"
 	},
 	"dependencies": {
+		"@xstate/react": "^1.3.3",
 		"clsx": "^1.1.1",
 		"next": "10.2.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"react-feather": "^2.0.9"
+		"react-feather": "^2.0.9",
+		"xstate": "^4.19.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.2",
@@ -28,6 +31,7 @@
 		"@storybook/addon-postcss": "^2.0.0",
 		"@storybook/react": "^6.2.9",
 		"@types/eslint": "^7.2.10",
+		"@types/jest": "^26.0.23",
 		"@types/node": "^15.3.0",
 		"@types/prettier": "^2.2.3",
 		"@types/react": "^17.0.5",
@@ -39,9 +43,11 @@
 		"eslint-import-resolver-typescript": "^2.4.0",
 		"eslint-plugin-prettier": "^3.4.0",
 		"eslint-plugin-tailwindcss": "^1.5.4",
+		"jest": "^27.0.3",
 		"postcss": "^7",
 		"prettier": "^2.3.0",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
+		"ts-jest": "^27.0.2",
 		"typescript": "^4.2.4"
 	}
 }
